PBEXENGDQA-4614 Se agregan ajustes para Datax